--- a/style/styles.css
+++ b/style/styles.css
@@ -1,3 +1,489 @@
-body{
-color: red;
+*{
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Be Vietnam Pro', sans-serif;
+    font-size: 16px;
+    text-decoration: none;
+    list-style-type: none;
+}
+
+/* header */
+.navegacion{
+    padding: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navegacion ul{
+    gap: 30px;
+    display: none;
+    padding: 0;
+}
+
+.navegacion ul li{
+    color: #242E52;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.navegacion ul li:active{
+    color: #242E5299;
+}
+
+.navegacion .hamburguerMenu{
+    width: 40px;
+    height: 40px;
+}
+
+.navegacion img {
+    cursor: pointer;
+}
+
+.navegacion button{
+    background-color: #8B48BF;
+    box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.25);
+    color: white;
+    border: none;
+    border-radius: 50px;
+    padding: 12px 40px;
+    cursor: pointer;
+    display: none;
+}
+
+/* main */
+
+.primeraSeccion{
+    margin-top: 14px;
+    padding: 0 40px;
+    display: flex;
+    flex-direction: column;
+}
+
+.primeraSeccion img{
+    width: 90%;
+    margin: 0 auto 100px;
+}
+
+.primeraSeccion div{
+    text-align: end;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.primeraSeccion div h2{
+    font-size: 2rem;
+    font-weight: bold;
+    color: #232C50;
+}
+
+.primeraSeccion div p{
+    font-size: 1.05rem;
+    font-weight: 500;
+    margin: 30px 0;
+}
+
+.primeraSeccion div button{
+    font-size: 1rem;
+    color: white;
+    background-color: #8B48BF;
+    padding: 12px 40px;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+}
+
+/* --------- */
+
+.segundaSeccion{
+    background-color: #3CDDF3;
+    color: white;
+    margin: 35px 0 65px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.segundaSeccion h3{
+    font-size: 2.1rem;
+    margin: 20px 30px 50px 0;
+}
+
+.segundaSeccion p{
+    font-size: 1rem;
+    margin-bottom: 20px;
+}
+
+.segundaSeccion .loremText{
+    display: none;
+}
+
+/* --------- */
+
+.terceraSeccion{
+    color: #B3B2B7;
+    margin-bottom: 60px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.terceraSeccion article {
+    padding-left: 35px;
+}
+
+.terceraSeccion article h3{
+    background-color: #8B48BF4D;
+    color: black;
+    padding: 10px 0;
+    border-radius: 30px 0 0 30px;
+}
+
+.terceraSeccion article span{
+    color: white;
+    background-color: #8B48BF;
+    border-radius: 30px;
+    margin-right: 15px;
+    padding: 10px 25px;
+}
+
+.terceraSeccion article p{
+    font-size: 1rem;
+    padding: 20px 18px 0 12px;
+    line-height: 26px;
+}
+
+/* --------- */
+
+.cuartaSeccion{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: 0 15px 60px 15px;
+}
+
+.cuartaSeccion h2{
+    color: #242E53;
+    font-size: 2.2rem;
+}
+
+.contenedorDeCards{
+    display: flex;
+}
+
+.cuartaSeccion .card{
+    background-color: rgb(249, 249, 249);
+    margin: 110px 0 45px 0;
+    padding: 0 28px 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cuartaSeccion .card:nth-child(2n+1){
+    display: none;
+}
+
+.cuartaSeccion .card img{
+    position: relative;
+    bottom: 35px;
+    transition: transform 500ms;
+}
+
+.cuartaSeccion .card img:hover{
+    transform: scale(1.4);
+}
+
+.cuartaSeccion .card span{
+    font-weight: bold;
+    color: #3F4868;
+    margin: -10px 0 20px 0;
+}
+
+.cuartaSeccion .card p{
+    color: #B9B9C1;
+}
+
+.cuartaSeccion button{
+    background-color: #8B48BF;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    width: max-content;
+    margin: 0 auto;
+    padding: 12px 50px;
+}
+
+
+/* --------- */
+
+.quintaSeccion{
+    background-color: #3CDDF3;
+    color: white;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px 80px;
+}
+
+.quintaSeccion h3{
+    font-size: 2.5rem;
+    line-height: 50px;
+}
+
+.quintaSeccion button{
+    background-color: #232C50;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+    color: white;
+    margin-top: 50px;
+    padding: 12px 41px;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+}
+
+/* --------- */
+
+/* footer */
+
+footer{
+    background-color: #1E1E26;
+    color: white;
+    text-align: center;
+    padding: 40px 50px;
+    display: flex;
+    flex-direction: column;
+}
+
+footer .updateInbox{
+    margin-bottom: 45px;
+}
+
+footer .updateInbox input[type="text"]{
+    border: 3px solid transparent;
+    border-radius: 50px;
+    padding: 12px 90px 12px 10px;
+    margin-right: 10px;
+    outline: none;
+}
+
+footer .updateInbox input[type="text"]:focus{
+    border: 3px solid #8B48BF;
+}
+
+footer .updateInbox button{
+    background-color: #8B48BF;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    padding: 12px 20px;
+}
+
+footer .navegacionFooter{
+    text-align: center;
+    margin: 0 20px 50px;
+    display: flex;
+    justify-content: space-between;
+}
+
+footer .navegacionFooter ul{
+    text-align: start;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+footer .redesSociales ul {
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 45px;
+}
+
+footer .navegacionFooter ul li , footer .redesSociales ul li{
+    font-size: 1rem;
+    cursor: pointer;
+    transition: transform 400ms;
+}
+
+footer .redesSociales ul li:hover{
+    transform: scale(1.5);
+}
+
+footer .navegacionFooter ul li:active{
+    color: #888888;
+}
+
+footer .copyright{
+    margin-top: 35px;
+    font-size: 1rem;
+    color: #8C8C94;
+}
+
+/* botonesIteractivos:active -- opacity */
+
+.botonInteractivo{
+    cursor: pointer;
+    transition: background-color 500ms, color, 500ms;
+}
+
+.botonInteractivo:focus{
+    background-color: rgb(255, 115, 115);
+    color: black;
+}
+
+@media (min-width: 850px){
+    .navegacion{
+        padding: 80px 215px 80px 170px;
+        margin-bottom: 150px;
+    }
+
+    .navegacion img:first-child{
+        transform: scale(1.5);
+    }
+
+    .navegacion ul{
+        display: flex;
+    }
+
+    .primeraSeccion{
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin-bottom: 100px;
+    }
+
+    .primeraSeccion img{
+        width: 45%;
+        margin-bottom: 0;
+    }
+
+    .primeraSeccion div{
+        width: 40%;
+        justify-content: center;
+        align-items: end;
+    }
+
+    .primeraSeccion div h2{
+        font-size: 3.1rem;
+    }
+
+    .primeraSeccion div p{
+        font-size: 1.1rem;
+    }
+
+    /* ------------- */
+
+    .segundaSeccion{
+        background-color: #8B48BF;
+        margin-bottom: 0;
+        padding: 0 220px;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .segundaSeccion h3{
+        margin: 40px 100px 40px 0
+    }
+
+    .segundaSeccion p:first-of-type{
+        display: none;
+    }
+
+    .segundaSeccion .loremText{
+        font-size: 1rem;
+        line-height: 24px;
+        width: 55%;
+        display: block;
+        margin: 0;
+    }
+
+    /* ------------- */
+
+    .terceraSeccion{
+        background-color: #FAFAFA;
+        padding-top: 40px;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .terceraSeccion article h3{
+        background-color: transparent;
+    }
+
+    .terceraSeccion article{
+        width: 45%;
+    }
+
+    .terceraSeccion article p{
+        margin-bottom: 35px;
+        padding: 20px 60px 0 90px;
+    }
+
+    /* ------------- */
+
+    .cuartaSeccion .card:nth-child(2n+1){
+        display: flex;
+    }
+
+    /* ------------- */
+
+    .quintaSeccion{
+        background-color: #8B48BF;
+        flex-direction: row;
+        justify-content: space-between;
+        text-align: start;
+        padding: 64px 100px;
+    }
+
+    .quintaSeccion button{
+        margin: 0;
+        background-color: white;
+        color: #8B48BF;
+    }
+
+    /* ------------- */
+
+    footer{
+        position: relative;
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-around;
+        padding: 52px 50px;
+    }
+
+    footer .redesSociales{
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: start;
+        justify-content: space-between;
+    }
+
+    footer .redesSociales ul{
+        gap: 20px;
+        margin: 0
+    }
+
+    footer .navegacionFooter{
+        justify-content: center;
+        gap: 240px;
+        margin: 0;
+    }
+
+    
+    footer .updateInbox input[type="text"]{
+        padding-right: 32px;
+    }
+
+    footer .copyright{
+        font-size: 0.8rem;
+        position: absolute;
+        bottom: 40px;
+        right: 120px;
+    }
+
 }
