--- a/style/styles.css
+++ b/style/styles.css
@@ -1,5 +1,6 @@
 *{
     margin: 0;
+    padding: 0  ;
     box-sizing: border-box;
     font-family: 'Be Vietnam Pro', sans-serif;
     font-size: 16px;
@@ -13,6 +14,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 30px;
 }
 
 .navegacion ul{
@@ -40,7 +42,7 @@
     cursor: pointer;
 }
 
-.navegacion button{
+.navegacion .botonInteractivo{
     background-color: #8B48BF;
     box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.25);
     color: white;
@@ -342,13 +344,19 @@ footer .copyright{
         margin-bottom: 150px;
     }
 
-    .navegacion img:first-child{
-        transform: scale(1.5);
-    }
-
     .navegacion ul{
         display: flex;
     }
+
+    .navegacion .hamburguerMenu{
+        display: none;
+    }
+
+    .navegacion .botonInteractivo{
+        display: block;
+    }
+
+    /* -------- */
 
     .primeraSeccion{
         flex-direction: row;
@@ -400,6 +408,7 @@ footer .copyright{
         width: 55%;
         display: block;
         margin: 0;
+        opacity: .6;
     }
 
     /* ------------- */
