--- a/style/styles.css
+++ b/style/styles.css
@@ -143,12 +143,26 @@
     border-radius: 30px 0 0 30px;
 }
 
-.terceraSeccion article span{
-    color: white;
+.terceraSeccion article .before01:before{
+    content: '01';
+}
+
+.terceraSeccion article .before02:before{
+    content: '02';
+}
+
+.terceraSeccion article .before03:before{
+    content: '03';
+}
+
+.terceraSeccion article .before01:before, 
+.terceraSeccion article .before02:before, 
+.terceraSeccion article .before03:before{
     background-color: #8B48BF;
-    border-radius: 30px;
+    color: white;
     margin-right: 15px;
     padding: 10px 25px;
+    border-radius: 50px;
 }
 
 .terceraSeccion article p{
@@ -326,6 +340,10 @@ footer .copyright{
     color: #8C8C94;
 }
 
+footer .copyright:before {
+    content: '\00A9';
+}
+
 /* botonesIteractivos:active -- opacity */
 
 .botonInteractivo{
@@ -388,7 +406,7 @@ footer .copyright{
     .segundaSeccion{
         background-color: #8B48BF;
         margin-bottom: 0;
-        padding: 0 220px;
+        padding: 40px 220px;
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
@@ -460,10 +478,11 @@ footer .copyright{
 
     footer{
         position: relative;
+        padding: 52px 50px;
         display: flex;
         flex-direction: row-reverse;
         justify-content: space-around;
-        padding: 52px 50px;
+        gap: 40px;
     }
 
     footer .redesSociales{
@@ -487,6 +506,10 @@ footer .copyright{
     
     footer .updateInbox input[type="text"]{
         padding-right: 32px;
+    }
+
+    footer .updateInbox {
+        margin-bottom: 0;
     }
 
     footer .copyright{
