--- a/style/styles.css
+++ b/style/styles.css
@@ -82,7 +82,7 @@
 }
 
 .primeraSeccion div p{
-    font-size: 1.05rem;
+    font-size: 1rem;
     font-weight: 500;
     margin: 30px 0;
 }
@@ -320,24 +320,37 @@ footer .redesSociales ul {
     margin-bottom: 45px;
 }
 
-footer .navegacionFooter ul li , footer .redesSociales ul li{
+footer .navegacionFooter ul li , footer .redesSociales ul li, footer .redesSociales img{
     font-size: 1rem;
     cursor: pointer;
-    transition: transform 400ms;
+    transition: transform 500ms;
 }
 
 footer .redesSociales ul li:hover{
     transform: scale(1.5);
 }
 
+
+footer .redesSociales img:hover{
+    transform: rotate(360deg);
+}
+
 footer .navegacionFooter ul li:active{
     color: #c0bb72;
 }
+
 
 footer .copyright{
     margin-top: 35px;
     font-size: 1rem;
     color: #8C8C94;
+    cursor: pointer;
+    transition: color 500ms, transform 500ms;
+}
+
+footer .copyright:hover{
+    color: white;
+    transform: scale(1.2);
 }
 
 footer .copyright:before {
@@ -453,6 +466,10 @@ footer .copyright:before {
     }
 
     /* ------------- */
+
+    .cuartaSeccion{
+        margin: 0px 70px 60px;
+    }
 
     .cuartaSeccion .card:nth-child(2n+1){
         display: flex;
